cleanup and reorganize the layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Ex16b</string>
+    <string name="intro">
+        This application demonstrates the interaction between the UI main thread
+        and two \'workers\' thread that run in the background, while synchronizing with each other
+    </string>
 </resources>
